WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112377
Objective-C API: Nested dictionaries are not converted properly in the Objective-C binding
https://bugs.webkit.org/show_bug.cgi?id=112377
Summary
Objective-C API: Nested dictionaries are not converted properly in the Object...
Mark Hahnenberg
Reported
2013-03-14 12:23:44 PDT
"Given an objective-C method like the following, exposed into JS via the new Objective-C interface: - (void)handleTheDictionary:(NSDictionary *)myDict; And a JS dictionary and call like so: myDict = { "foo" = 1, "bar" = { "baz" : 2 } } handleTheDictionary(myDict); The dictionary received by objective c will actually only be: { "baz": 2 }. Further investigations show that only the deepest dictionary is used."
Attachments
Patch
(2.92 KB, patch)
2013-03-14 12:30 PDT
,
Mark Hahnenberg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Hahnenberg
Comment 1
2013-03-14 12:23:54 PDT
<
rdar://problem/13422001
>
Mark Hahnenberg
Comment 2
2013-03-14 12:30:10 PDT
Created
attachment 193172
[details]
Patch
WebKit Review Bot
Comment 3
2013-03-14 13:17:12 PDT
Comment on
attachment 193172
[details]
Patch Clearing flags on attachment: 193172 Committed
r145842
: <
http://trac.webkit.org/changeset/145842
>
WebKit Review Bot
Comment 4
2013-03-14 13:17:15 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug