Objective-C API: Nested dictionaries are not converted properly in the Objective-C binding https://bugs.webkit.org/show_bug.cgi?id=112377

Reviewed by Oliver Hunt.

Accidental reassignment of the root task in the container conversion logic was causing the last
array or dictionary processed to be returned in the case of nested containers.

* API/JSValue.mm:
(containerValueToObject):
* API/tests/testapi.mm:


Canonical link: https://commits.webkit.org/130682@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@145842 268f45cc-cd09-0410-ab3c-d52691b4dbfc